k8s/base/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: secureboard-api
  namespace: secureboard
spec:
  type: ClusterIP

  selector:
    app: secureboard-api

  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secureboard-api
  namespace: secureboard

spec:
  replicas: 1

  selector:
    matchLabels:
      app: secureboard-api

  template:
    metadata:
      labels:
        app: secureboard-api

    spec:
      automountServiceAccountToken: false

      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001

        fsGroup: 10001
        fsGroupChangePolicy: OnRootMismatch

        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: api
          image: secureboard-api:base
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

          startupProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 2
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true

            capabilities:
              drop:
                - ALL

          volumeMounts:
            - name: tmp
              mountPath: /tmp

            - name: secureboard-secrets
              mountPath: /run/secrets/secureboard
              readOnly: true

      volumes:
        - name: tmp
          emptyDir: {}

        - name: secureboard-secrets
          secret:
            secretName: secureboard-secrets
            defaultMode: 0440

            items:
              - key: DATABASE_URL
                path: DATABASE_URL

              - key: JWT_SECRET
                path: JWT_SECRET
