k8s/base/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: secureboard-api-network-policy
  namespace: secureboard
spec:
  podSelector:
    matchLabels:
      app: secureboard-api

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - ports:
        - protocol: TCP
          port: 8000

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - protocol: TCP
          port: 5432

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: secureboard-migrations-network-policy
  namespace: secureboard
spec:
  podSelector:
    matchLabels:
      app: secureboard-migrations

  policyTypes:
    - Ingress
    - Egress

  # Migration Pods never need inbound connections.
  ingress: []

  egress:
    # DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    # Database only
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - protocol: TCP
          port: 5432

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-network-policy
  namespace: secureboard
spec:
  podSelector:
    matchLabels:
      app: postgres

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: secureboard-api

        - podSelector:
            matchLabels:
              app: secureboard-migrations

      ports:
        - protocol: TCP
          port: 5432

  egress: []
